--- a/addon/config.json
+++ b/addon/config.json
@@ -8,5 +8,6 @@
   "tooltip_color": "#323633",
   "multikill_interval_s": 5000,
   "killing_spree_interval_s": 5000,
-  "play_sound": "true"
+  "play_sound": "true",
+  "minecraft_version_is_pre_1_20_6": "false"
 }
