--- a/addon/config.json
+++ b/addon/config.json
@@ -9,5 +9,7 @@
   "multikill_interval_s": 5000,
   "killing_spree_interval_s": 5000,
   "play_sound": "true",
-  "minecraft_version_is_pre_1_20_5": "false"
+  "minecraft_version_is_pre_1_20_5": "false", 
+  "is_bedrock_edition": "false",
+  "minecraft_username": "@p"
 }
